# trayscale

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  com.maveonair.Trayscale.desktop  com.maveonair.Trayscale.yml  com.maveonair.trayscale.desktop  com.maveonair.trayscale.json  com.maveonair.trayscale.yml  com.maveonair.tryscale.desktop  setup.cfg
src/: __main__.py  tailscale.py  trayscale_app.py
