[metadata]
name = com.maveonair.Trayscale
version = 0.0.1
url = https://github.com/maveonair/trayscale
author = Fabian Mettler
author_email = dev@maveonair.com
description = A simple Tailscale systray utility for KDE Plasma
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: End Users/Desktop
    Topic :: Utilities
    Programming Language :: Python
    Operating System :: POSIX :: Linux
keywords= tailsacle

[options]
packages = trayscale
package_dir =
    trayscale = src
include_package_data = True

[options.data_files]
share/applications =
    com.maveonair.trayscale.desktop
share/icons/hicolor/scalable/apps =
    com.maveonair.trayscale.svg

[options.entry_points]
console_scripts =
    trayscale = trayscale.trayscale_app:main
